stop using backticks

--- a/_documentation/docs/20190417-botblock.md
+++ b/_documentation/docs/20190417-botblock.md
@@ -46,8 +46,8 @@ const updateGuildCounts = () => {
   })
     .then(res => res.json())
     .then(({success, failure}) => {
-      console.log(`Success: ${Object.keys(success).join(', ')}`)
-      console.log(`Failure: ${Object.keys(failure).join(', ')}`)
+      console.log('Success: ' + Object.keys(success).join(', '))
+      console.log('Failure: ' + Object.keys(failure).join(', '))
     })
 };
 
