--- a/_documentation/blog/20190415-1.md
+++ b/_documentation/blog/20190415-1.md
@@ -15,6 +15,7 @@ This means more can be delivered to the end user in a timely manner.
 + Made YouTube video in home screen use the `nocookies` site
 + Removed `create-react-app` and the bodged together SSR solution
 + Added `parcel` instead
+- Removed YeoJin from LOONA 1/3
 ```
 
 ## Images
