add "type" to each post

--- a/_documentation/blog/20190414-1.md
+++ b/_documentation/blog/20190414-1.md
@@ -3,6 +3,7 @@ date: 2019-04-14
 title: Today on Terminal.ink
 description: See how Terminal.ink has improved the Discord Apps Marketplace today, on the 14th April 2019.
 by: 7coil
+type: blog
 ---
 
 GitHub releases seems like the best place to write a blog.  
