--- a/_documentation/blog/20190415-1.md
+++ b/_documentation/blog/20190415-1.md
@@ -3,6 +3,7 @@ date: 2019-04-15
 title: Today on Terminal.ink
 description: See how Terminal.ink has improved the Discord Apps Marketplace today, on the 15th April 2019.
 by: 7coil
+type: blog
 ---
 
 The terrible reign of Webpack is over - with `parcel`, future Terminal.ink Bot List builds will be accelerated into the future, with less configuration files.
