--- a/_documentation/blog/20190419-1.md
+++ b/_documentation/blog/20190419-1.md
@@ -3,6 +3,7 @@ date: 2019-04-19
 title: Yesterday on Terminal.ink
 description: See how Terminal.ink has improved the Discord Apps Marketplace yesterday, on the 18th April 2019.
 by: 7coil
+type: blog
 ---
 
 Wow we're late.
