--- a/_documentation/blog/20190501-1.md
+++ b/_documentation/blog/20190501-1.md
@@ -3,6 +3,7 @@ date: 2019-05-01
 title: Bot List Updates
 description: A new Bot List layout for improved functionality and appearance, as well as automatic deploys to GitHub
 by: 7coil
+type: blog
 ---
 
 ## Changes
