--- a/_documentation/docs/20190417-botblock.md
+++ b/_documentation/docs/20190417-botblock.md
@@ -3,6 +3,7 @@ date: 2019-04-17
 title: How to use the BotBlock proprietary software to post bot counts to discordapps.dev
 description: Learn how to use the BotBlock proprietary API to send your bot's server counts to discordapps.dev, as well as other third party bot list service providers
 by: 7coil
+type: docs
 ---
 
 As your bot application grows, you want to expose your bot to as many bot list and application
