--- a/_documentation/blog/20190417-1.md
+++ b/_documentation/blog/20190417-1.md
@@ -3,6 +3,7 @@ date: 2019-04-17
 title: Today on Terminal.ink
 description: See how Terminal.ink has improved the Discord Apps Marketplace today, on the 17th April 2019.
 by: 7coil
+type: blog
 ---
 
 ## Changes
