"always use semi-colons";;

--- a/_documentation/docs/20190417-botblock.md
+++ b/_documentation/docs/20190417-botblock.md
@@ -47,14 +47,14 @@ const updateGuildCounts = () => {
   })
     .then(res => res.json())
     .then(({success, failure}) => {
-      console.log('Success: ' + Object.keys(success).join(', '))
-      console.log('Failure: ' + Object.keys(failure).join(', '))
-    })
+      console.log('Success: ' + Object.keys(success).join(', '));
+      console.log('Failure: ' + Object.keys(failure).join(', '));
+    });
 };
 
 client.once('ready', () => {
   updateGuildCounts();
-  setInterval(updateGuildCounts, 1.8e6) // Every 30 minutes
+  setInterval(updateGuildCounts, 1.8e6); // Every 30 minutes
 })
 ```
 
