--- a/_documentation/blog/20190508-1.md
+++ b/_documentation/blog/20190508-1.md
@@ -1,7 +1,7 @@
 ---
-date: 2019-05-01
+date: 2019-05-08
 title: Bot List Updates
-description: A new fresh coat of paint
+description: A new fresh coat of paint, with some new styles here and there
 by: 7coil
 type: blog
 ---
