make everything better

--- a/_documentation/blog/20190508-1/index.mdx
+++ b/_documentation/blog/20190508-1/index.mdx
@@ -16,9 +16,9 @@ type: blog
 ```
 
 ## Images
-![New Docs Page](/assets/img/blog/20190508-1/wow.png)  
+![New Docs Page](wow.png)  
 It's not obnoxiously large
 
-![New Title Bar](/assets/img/blog/20190508-1/shrinky.gif)  
+![New Title Bar](shrinky.gif)  
 This bar shrinks to fit more items on screen when you scroll down.
 It looks just like the jumbotron we used to have in 2017.
