--- a/_documentation/docs/20190417-botblock/index.mdx
+++ b/_documentation/docs/20190417-botblock/index.mdx
@@ -16,7 +16,7 @@ lists all at once.
 ## Setup
 You will need your `Discord Apps Marketplace Token`, found by clicking the `Configure` button under your bot page.
 
-![Configure](/assets/img/docs/20190417-botblock/configure.png)
+![Configure](configure.png)
 
 ## Discord.js and Eris
 You will need to install `node-fetch` to POST your count to the proprietary API
