--- a/_documentation/howto/20190417-fix-code-grant/index.mdx
+++ b/_documentation/howto/20190417-fix-code-grant/index.mdx
@@ -9,7 +9,7 @@ type: howto
 When you're testing your Discord Bot, and you try to invite your bot,
 you may come across this message.
 
-![Code Grant](/assets/img/howto/20190417-fix-code-grant/codegrant.png)
+![Code Grant](codegrant.png)
 
 This error will block your users from being able to invite your bot,
 which will stifle the growth of your bot.
@@ -18,7 +18,7 @@ which will stifle the growth of your bot.
 1. Enter the Discord Developer Portal at https://discordapp.com/developers/applications/
 2. Click on your bot application
 3. Within the `Bot` tab, disable the `Requires OAuth2 Code Grant` toggle
-   ![Disabling the switch](/assets/img/howto/20190417-fix-code-grant/disable.gif)
+   ![Disabling the switch](disable.gif)
 
 ## Conclusion
 After following all steps, your invite link should now be working again.
